[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-review-env"
version = "1.0.0"
description = "An OpenEnv environment for training AI agents to review code diffs"
authors = [{name = "B2prakash"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "numpy",
    "openenv==0.1.13",
]

[project.scripts]
server = "server.app:main"
